--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Isabella Salducco
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
-baseurl                  : "" # Set this to your repo name 
+name                     : Isabella Salducco
+description              : Isabella Salducco - Projects and CV 
+baseurl                  : "fa25-portofolio-isabellasalducco" # Set this to your repo name 
 
 # Theme and Style
 theme: jekyll-theme-minimal
